--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "cartpole"
 version = "0.0.0"
 requires-python = ">=3.8"
 dependencies = [
+  "mujoco==3.2.2"
 ]
 
 [project.optional-dependencies]
