--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ requires-python = ">=3.8"
 dependencies = [
   "mujoco==3.2.2",
   "numpy>=1.20.0",
-  "Pillow>=9.0.0"
+  "Pillow>=9.0.0",
+  "casadi>=3.6.0",
+  "scipy>=1.7.0"
 ]
 
 [tool.setuptools.packages.find]
