--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,11 @@ requires-python = ">=3.8"
 dependencies = [
   "mujoco==3.2.2",
   "numpy>=1.20.0",
+  "torch>=1.9.0",
   "Pillow>=9.0.0",
   "casadi>=3.6.0",
-  "scipy>=1.7.0"
+  "stable-baselines3>=2.0.0",
+  "gymnasium>=0.29.0"
 ]
 
 [tool.setuptools.packages.find]
