--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,5 @@ dev = []
 [project.scripts]
 cartpole = "cartpole.cartpole:main"
 train-dqn = "cartpole.agents.dqn:main"
+train-ppo = "cartpole.agents.ppo:main"
+train-sac = "cartpole.agents.sac:main"
